# spessmod

./: CMakeLists.txt  PLAN  README.md  capture_setup.c  capture_setup.h  known_registers.c  known_registers.h  log.h  main.c  packet_processing.c  packet_processing.h
docs/: REGISTER_MAP.md  Register_Map.csv  Register_Map.gnumeric
src/logging/: influx_logger.c  influx_logger.h  influx_secrets.h
src/main/: capture_setup.h  known_registers.c  known_registers.h  log.h  main.c  packet_processing.c  packet_processing.h
src/main/include/: log.h  packet_processing.h
